--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 Einsum = "b7d42ee7-0b51-5a75-98ca-779d3107e4c0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
